awe-tests/awe-boot/kubernetes/staging/awe-boot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.gitlab.com/app: aweframework-awe
    app.gitlab.com/env: staging
    version: 4.4.3-SNAPSHOT
  labels:
    app: awe-boot
    env: staging
  name: awe-boot
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awe-boot
      env: staging
  template:
    metadata:
      annotations:
        app.gitlab.com/app: aweframework-awe
        app.gitlab.com/env: staging
        version: 4.4.3-SNAPSHOT
      labels:
        app: awe-boot
        env: staging
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: cloud
        - name: MYSQL_URL
          valueFrom:
            secretKeyRef:
              key: mysql-url
              name: awe-boot
        - name: MYSQL_USERNAME
          valueFrom:
            secretKeyRef:
              key: mysql-username
              name: awe-boot
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mysql-password
              name: awe-boot
        - name: MYSQL_CLIENT_KEYSTORE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: client-keystore-password
              name: awe-boot
        - name: TRUSTSTORE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: truststore-password
              name: awe-boot
        image: registry.gitlab.com/aweframework/awe/awe-boot:4.4.3-SNAPSHOT@sha256:aaaaaaaaaaaa
        imagePullPolicy: Always
        name: awe-boot
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 256Mi
        volumeMounts:
        - mountPath: /mnt/secrets
          name: secrets
          readOnly: true
      imagePullSecrets:
      - name: registry.gitlab.com
      volumes:
      - name: secrets
        secret:
          items:
          - key: truststore.jks
            path: truststore.jks
          - key: mysql-client-keystore.p12
            path: mysql-client-keystore.p12
          secretName: awe-boot
