awe-tests/awe-boot/kubernetes/staging/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: staging
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        name: redis
    spec:
      containers:
        - name: redis
          image: redis:6.2.4
          command: ["redis-server", "/redis-master/redis.conf"]
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
            - mountPath: /redis-master
              name: config
      volumes:
        - name: data
          emptyDir: { }
        - name: config
          configMap:
            name: awe-redis-config
            items:
              - key: redis-config
                path: redis.conf
