awe-tests/awe-boot/kubernetes/staging/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: staging
  labels:
    app: redis
spec:
  selector:
    name: redis
  ports:
    - protocol: TCP
      port: 6379
