awe-tests/awe-boot/kubernetes/staging/awe-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: awe-ingress
  namespace: staging
  labels:
    name: awe-ingress
    env: staging
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: staging-static-ip
    networking.gke.io/managed-certificates: aweframework-certs
spec:
  rules:
    - host: staging.aweframework.com
      http:
        paths:
        - backend:
            serviceName: awe-boot-service
            servicePort: 80
    - host: react-staging.aweframework.com
      http:
        paths:
        - backend:
            serviceName: awe-react-service
            servicePort: 80
